<resources>
    <string name="app_name">iCue Connect</string>
    <string name="service_label">NotificationListener</string>
    <string name="button_UpdateiCUE">Update iCUE</string>
    <string name="testView_instructions">Enter RGB Values Below</string>
    <string name="hint_RGBValInput">Enter RGB Value</string>
    <string name="button_PickColor">Pick Color</string>
    <string name="textViewPickedColor">Your picked color is:</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="app_id">app_id:</string>
    <string name="secret">secret:</string>
    <string name="key">key:</string>
    <string name="cluster">cluster:</string>
    <string name="enter_pusher_credentials">Enter Pusher Credentials</string>
    <string name="refer_to_the_help_page_for_instructions">Refer To The Help Page For Instructions</string>
    <string name="save">Save</string>
    <string name="reset_control">Reset Control</string>
    <string name="notification_leds">Notification Leds</string>
    <string name="press_the_allow_button_to_enable_in_settings">Press The Allow Button To Enable In Settings</string>
    <string name="allow">allow</string>
    <string name="switchLive">LIVE</string>
    <string name="sync_devices">Sync Devices</string>
    <string-array name="commands_spinner">
        <item>ALL</item>
    </string-array>
    <string-array name="cluster_spinner">
        <item>mt1</item>
        <item>us2</item>
        <item>us3</item>
        <item>eu</item>
        <item>ap1</item>
        <item>ap2</item>
        <item>ap3</item>
        <item>ap4</item>
    </string-array>
</resources>